--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/aceleraDevsPabloAPI
 spring.datasource.username=root
 spring.datasource.password=110395@xD1234p
+
+spring.jpa.show-sql=true
