--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=110395@xD1234p
 
 spring.jpa.show-sql=true
+
+server.error.include-stacktrace=never
