--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost/aceleraDevsPabloAPI
-spring.datasource.username=root
-spring.datasource.password=110395@xD1234p
+spring.datasource.url=jdbc:mysql://localhost/{nomeDoBancoDeDados}
+spring.datasource.username={user}
+spring.datasource.password={password}
 
 spring.jpa.show-sql=true
 
